--- a/app/src/main/res/layout/profile_listview_row.xml
+++ b/app/src/main/res/layout/profile_listview_row.xml
@@ -7,6 +7,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
         android:padding="10dp"
         android:visibility="gone"
         android:id="@+id/selectionImage"
@@ -14,8 +16,9 @@
         />
 
     <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_toRightOf="@id/selectionImage"
         android:orientation="vertical">
         <TextView
             android:paddingTop="5dp"
@@ -35,7 +38,7 @@
             android:textColor="@color/text_gray"
             android:id="@+id/secondItemText"
             android:paddingBottom="5dp"/>
-        </LinearLayout>
+    </LinearLayout>
 
 
     <ImageButton
