--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:padding="16dp"
         android:background="#ffffff">
         <!--dynamically add content here-->
     </ScrollView>
@@ -43,6 +44,8 @@
         android:id="@+id/co_coupons_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:background="#cccccc"
         >
         <TextView
@@ -69,6 +72,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:background="#cccccc" >
         <TextView
             style="@style/CheckoutFooter"
@@ -95,6 +100,8 @@
         android:id="@+id/co_shipping_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:visibility="gone"
         android:background="#cccccc">
         <TextView
@@ -122,6 +129,8 @@
         android:id="@+id/co_tax_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:visibility="gone"
         android:background="#cccccc">
         <TextView
@@ -142,32 +151,39 @@
             android:paddingBottom="0dp"
             android:textColor="@color/text_nearly_black"
             />
+
+
+        <!-- submit order -->
+        <RelativeLayout
+            android:id="@+id/co_submission_layout"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_below="@id/checkout_tax"
+            android:gravity="center"
+            android:visibility="gone"
+            android:background="@color/background_red_submission">
+            <TextView
+                style="@style/CheckoutFooter"
+                android:layout_width="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:text="@string/submit_order"
+                android:textSize="20sp"
+                android:textColor="@color/text_white"
+                />
+            <TextView
+                android:id="@+id/checkout_order_total"
+                style="@style/CheckoutFooter"
+                android:layout_width="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:textSize="20sp"
+                android:textColor="@color/text_white"
+                />
+        </RelativeLayout>
+
     </RelativeLayout>
 
-    <!-- submit order -->
-    <RelativeLayout
-        android:id="@+id/co_submission_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:background="@color/background_red_submission">
-        <TextView
-            style="@style/CheckoutFooter"
-            android:layout_width="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:text="@string/submit_order"
-            android:textSize="28sp"
-            android:textColor="@color/text_white"
-            />
-        <TextView
-            android:id="@+id/checkout_order_total"
-            style="@style/CheckoutFooter"
-            android:layout_width="wrap_content"
-            android:layout_alignParentRight="true"
-            android:textSize="28sp"
-            android:textColor="@color/text_white"
-            />
-    </RelativeLayout>
 
 </LinearLayout>
 
