--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -4,6 +4,7 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cart_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -131,6 +132,7 @@
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:paddingTop="0dp"
             android:paddingBottom="8dp"
@@ -139,9 +141,10 @@
             android:textColor="@color/text_black"
             android:text="@string/pretax_subtotal" />
         <TextView
-            android:layout_height="wrap_content"
             android:id="@+id/cart_subtotal"
+            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:paddingTop="0dp"
             android:paddingBottom="8dp"
@@ -151,16 +154,28 @@
             />
 
         <!--checkout button-->
-        <TextView
+        <android.support.v7.widget.CardView
             android:id="@+id/action_checkout"
-            android:layout_height="36dp"
             android:layout_width="match_parent"
+            android:layout_height="36dp"
             android:layout_below="@id/cart_subtotal"
-            android:gravity="center"
-            android:text="@string/proceed_to_checkout"
-            android:textSize="14sp"
-            android:textColor="@color/text_white"
-            android:background="@color/background_red_submission"/>
+            card_view:cardCornerRadius="1dp"
+            card_view:cardElevation="0dp"
+            card_view:cardBackgroundColor="@color/background_red_submission" >
+
+            <TextView
+                android:id="@+id/action_checkout_text"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_below="@id/cart_subtotal"
+                android:gravity="center"
+                android:text="@string/proceed_to_checkout"
+                android:textSize="14sp"
+                android:textColor="@color/text_white"
+            />
+
+        </android.support.v7.widget.CardView>
+
 
     </RelativeLayout>
 
