--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -3,6 +3,7 @@
   ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/checkout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -126,20 +127,21 @@
             android:textColor="@color/text_nearly_black"  />
 
         <!-- submission button -->
-        <RelativeLayout
+        <android.support.v7.widget.CardView
             android:id="@+id/co_submission_layout"
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:layout_below="@id/checkout_tax"
             android:layout_marginTop="8dp"
-            android:gravity="center"
             android:visibility="gone"
-            android:background="@color/background_red_submission">
+            card_view:cardCornerRadius="1dp"
+            card_view:cardElevation="0dp"
+            card_view:cardBackgroundColor="@color/background_red_submission" >
+
             <TextView
                 style="@style/CheckoutFooter"
                 android:layout_width="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
+                android:layout_gravity="left|center_vertical"
                 android:text="@string/submit_order"
                 android:textSize="14sp"
                 android:textColor="@color/text_white"
@@ -148,12 +150,41 @@
                 android:id="@+id/checkout_order_total"
                 style="@style/CheckoutFooter"
                 android:layout_width="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
+                android:layout_gravity="right|center_vertical"
                 android:textSize="14sp"
                 android:textColor="@color/text_white"
                 />
-        </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <!--<RelativeLayout-->
+            <!--android:id="@+id/co_submission_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="36dp"-->
+            <!--android:layout_below="@id/checkout_tax"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--android:gravity="center"-->
+            <!--android:visibility="gone"-->
+            <!--android:background="@color/background_red_submission">-->
+            <!--<TextView-->
+                <!--style="@style/CheckoutFooter"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_alignParentLeft="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:text="@string/submit_order"-->
+                <!--android:textSize="14sp"-->
+                <!--android:textColor="@color/text_white"-->
+                <!--/>-->
+            <!--<TextView-->
+                <!--android:id="@+id/checkout_order_total"-->
+                <!--style="@style/CheckoutFooter"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_alignParentRight="true"-->
+                <!--android:layout_centerVertical="true"-->
+                <!--android:textSize="14sp"-->
+                <!--android:textColor="@color/text_white"-->
+                <!--/>-->
+        <!--</RelativeLayout>-->
 
     </RelativeLayout>
 
