--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -8,7 +8,7 @@
     android:id="@+id/cart_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_white"
+    android:background="@color/background_off_white"
     android:orientation="vertical">
 
     <!--free shipping message-->
@@ -40,26 +40,25 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="2dp"
         android:scrollbars="vertical"
+        android:background="@color/background_off_white"
         />
 
     <!--coupon & rewards heading -->
     <RelativeLayout
         android:id="@+id/coupons_rewards_layout"
-        android:layout_height="48dp"
+        android:layout_height="40dp"
         android:layout_width="match_parent"
         android:gravity="center_vertical"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:background="@color/background_extra_light_gray">
+        android:background="@color/background_extra_light_gray_2">
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_alignParentLeft="true"
             android:text="@string/coupons_rewards"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/text_blue"
             />
         <TextView
@@ -67,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/text_blue"
             />
     </RelativeLayout>
@@ -94,18 +93,17 @@
         android:id="@+id/cart_shipping_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
+        android:paddingTop="7dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:background="@color/background_light_gray">
+        android:background="@color/background_off_white">
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_alignParentLeft="true"
             android:text="@string/shipping"
-            android:paddingTop="2dp"
             android:paddingBottom="0dp"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/text_nearly_black"
         />
         <TextView
@@ -113,9 +111,8 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
-            android:paddingTop="2dp"
             android:paddingBottom="0dp"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:textColor="@color/text_nearly_black"
             />
     </RelativeLayout>
@@ -127,16 +124,16 @@
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingBottom="8dp"
-        android:background="@color/background_light_gray">
+        android:paddingBottom="12dp"
+        android:background="@color/background_off_white">
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:paddingTop="0dp"
-            android:paddingBottom="8dp"
-            android:textSize="18sp"
+            android:paddingBottom="0dp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:textColor="@color/text_black"
             android:text="@string/pretax_subtotal" />
@@ -147,8 +144,8 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:paddingTop="0dp"
-            android:paddingBottom="8dp"
-            android:textSize="18sp"
+            android:paddingBottom="0dp"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:textColor="@color/text_black"
             />
@@ -159,6 +156,8 @@
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:layout_below="@id/cart_subtotal"
+            android:layout_margin="0dp"
+            android:padding="0dp"
             card_view:cardCornerRadius="1dp"
             card_view:cardElevation="0dp"
             card_view:cardBackgroundColor="@color/background_red_submission" >
