--- a/app/src/main/res/layout/cart_item_group.xml
+++ b/app/src/main/res/layout/cart_item_group.xml
@@ -10,9 +10,10 @@
     android:layout_centerHorizontal="true"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="6dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="0dp"
     card_view:contentPadding="0dp"
+    card_view:cardBackgroundColor="@color/background_white"
     card_view:cardCornerRadius="2dp"
     card_view:cardElevation="2dp">
 
