--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,13 +4,14 @@
     <color name="staples_light">#cc0000</color>
     <color name="background_red_submission">#cc0000</color>
     <color name="background_white">#ffffff</color>
+    <color name="background_off_white">#f5f5f5</color>
     <color name="background_light_gray">#c6c6c6</color>
     <color name="background_extra_light_gray">#e6e6e6</color>
     <color name="background_extra_light_gray_2">#eeeeee</color>
     <color name="background_green">#00ff00</color>
     <color name="background_blue">#3f6fff</color>
     <color name="hr_extra_light_gray">#f5f5f5</color>
-    <color name="text_blue">#3f9fff</color>
+    <color name="text_blue">#036ae0</color>
     <color name="text_red">#ff0000</color>
     <color name="text_green">#6fab04</color>
     <color name="text_black">#000000</color>
