--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -29,7 +29,6 @@
         android:gravity="center_horizontal"
         android:paddingTop="40dp"
         android:textSize="20dp"
-        android:background="@color/background_white"
         android:text="@string/empty_cart_msg"
         android:visibility="gone"
         />
@@ -54,7 +53,7 @@
         card_view:contentPaddingRight="16dp"
         card_view:cardCornerRadius="0dp"
         card_view:cardElevation="1dp"
-        card_view:cardBackgroundColor="@color/background_extra_light_gray_2">
+        card_view:cardBackgroundColor="@color/background_extra_light_gray">
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
@@ -125,7 +124,6 @@
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingBottom="12dp"
         android:background="@color/background_off_white">
         <TextView
             android:layout_height="wrap_content"
@@ -157,7 +155,8 @@
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:layout_below="@id/cart_subtotal"
-            android:layout_margin="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:padding="0dp"
             card_view:cardCornerRadius="1dp"
             card_view:cardElevation="0dp"
