--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -23,7 +23,6 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_toRightOf="@id/cartitem_image"
-        android:layout_marginTop="15dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true">
         <TextView
@@ -31,17 +30,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="10dp"
             android:lines="2"
             android:ellipsize="end"
             android:textSize="14sp"
             android:textColor="@color/text_nearly_black"
+            android:paddingTop="0dp"
             android:paddingBottom="0dp"/>
         <com.staples.mobile.cfa.widget.PriceSticker
             android:id="@+id/cartitem_price"
             style="@style/SmallPriceSticker"
             android:layout_below="@id/cartitem_title"
-            android:paddingTop="8dp"
-            android:paddingBottom="6dp"/>
+            android:layout_marginBottom="11dp"
+            android:padding="0dp"/>
         <ImageView
             android:id="@+id/cartitem_delete"
             android:layout_width="wrap_content"
@@ -50,6 +52,7 @@
             android:layout_alignParentLeft="true"
             android:layout_gravity="center_vertical"
             android:padding="1dp"
+            android:background="@color/background_extra_light_gray"
             android:src="@drawable/ic_close_black_18dp"
             />
         <com.staples.mobile.cfa.widget.QuantityEditor
