--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:visibility="invisible">
-        <!-- ActionBar -->
+        <!-- ActionBar, these must be kept in priority order -->
         <com.staples.mobile.cfa.widget.ActionBar
             android:id="@+id/action_bar"
             android:layout_width="match_parent"
@@ -27,7 +27,49 @@
             android:paddingLeft="6dp"
             android:paddingRight="6dp"
             android:animateLayoutChanges="true"
-            android:background="@color/staples_light"/>
+            android:background="@color/staples_light">
+            <ImageView
+                android:id="@+id/close_button"
+                style="@style/ActionBarIconStyle"
+                android:layout_gravity="center_vertical|left"
+                android:src="@drawable/ic_close_white"/>
+            <ImageView
+                android:id="@+id/action_left_drawer"
+                style="@style/ActionBarIconStyle"
+                android:layout_gravity="center_vertical|left"
+                android:src="@drawable/ic_menu_white"/>
+            <com.staples.mobile.cfa.widget.BadgeImageView
+                android:id="@+id/action_show_cart"
+                style="@style/ActionBarBadgeStyle"
+                android:layout_gravity="center_vertical|right"/>
+            <Button
+                android:id="@+id/co_signin_button"
+                style="@style/ActionBarButtonStyle"
+                android:layout_gravity="center_vertical|right"/>
+            <TextView
+                android:id="@+id/cart_item_qty"
+                style="@style/ActionBarTextStyle"
+                android:layout_gravity="center_vertical|right"/>
+            <ImageView
+                android:id="@+id/option_icon"
+                style="@style/ActionBarIconStyle"
+                android:layout_gravity="center_vertical|right"
+                android:src="@drawable/ic_search_white"/>
+            <SearchView
+                android:id="@+id/search_text"
+                style="@style/ActionBarSearchStyle"
+                android:layout_gravity="center_vertical|right"
+                android:src="@drawable/ic_search_white"/>
+            <ImageView
+                android:id="@+id/action_logo"
+                style="@style/ActionBarIconStyle"
+                android:layout_gravity="center_vertical|left"
+                android:src="@drawable/ic_staples"/>
+            <TextView
+                android:id="@+id/action_title"
+                style="@style/ActionBarTextStyle"
+                android:layout_gravity="center_vertical|left"/>
+        </com.staples.mobile.cfa.widget.ActionBar>
         <android.support.v4.widget.DrawerLayout
             android:id="@+id/drawer_layout"
             android:layout_width="match_parent"
