--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,51 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar">
-        <item name="actionBarTextStyle">@style/ActionBarTextStyle</item>
-        <item name="actionBarIconStyle">@style/ActionBarIconStyle</item>
-        <item name="actionBarButtonStyle">@style/ActionBarButtonStyle</item>
-        <item name="actionBarBadgeStyle">@style/ActionBarBadgeStyle</item>
-        <item name="actionBarSearchStyle">@style/ActionBarSearchStyle</item>
+        <item name="android:textAppearanceMedium">@drawable/ic_android</item>
     </style>
 
     <!-- ActionBar styles -->
-    <attr name="actionBarIconStyle" format="reference"/>
-    <attr name="actionBarTextStyle" format="reference"/>
-    <attr name="actionBarButtonStyle" format="reference"/>
-    <attr name="actionBarBadgeStyle" format="reference"/>
-    <attr name="actionBarSearchStyle" format="reference"/>
-
+    <style name="ActionBarBadgeStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:src">@drawable/ic_shopping_cart_white</item>
+    </style>
+    <style name="ActionBarButtonStyle" parent="android:Widget.Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+    <style name="ActionBarIconStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+    <style name="ActionBarSearchStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
     <style name="ActionBarTextStyle" parent="android:Widget.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">24sp</item>
         <item name="android:lines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textColor">#ffffff</item>
-        <item name="android:background">#00ff00</item>
-    </style>
-
-    <style name="ActionBarIconStyle">
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">#ffffff</item>
-        <item name="android:background">#0000ff</item>
-    </style>
-
-    <style name="ActionBarButtonStyle" parent="android:Widget.Button">
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">#ffffff</item>
-        <item name="android:background">#ff00ff</item>
-    </style>
-
-    <style name="ActionBarBadgeStyle">
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">#ffffff</item>
-        <item name="android:background">#ff00ff</item>
-        <item name="android:src">@drawable/ic_shopping_cart_white</item>
-    </style>
-
-    <style name="ActionBarSearchStyle">
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">#ffffff</item>
-        <item name="android:background">#ff00ff</item>
     </style>
 
     <style name="DrawerStyle">
