Beta, no search working

--- a/app/src/main/res/layout/drawer_account.xml
+++ b/app/src/main/res/layout/drawer_account.xml
@@ -13,5 +13,5 @@
         android:id="@+id/account_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/signin_title"/>
+        android:text="@string/login_title"/>
 </LinearLayout>
