order confirmation page updates

--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -9,14 +9,15 @@
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/background_white"
+    >
 
     <!-- scrollable contents -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="#ffffff">
+        android:layout_weight="1">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,7 +55,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="32dp"
                 android:textSize="14sp"
                 android:textColor="@color/text_nearly_black"
                 android:text="@string/order_confirmation_msg3" />
@@ -69,7 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 android:textColor="@color/text_nearly_black"
                 />
 
@@ -77,13 +79,14 @@
             <TextView
                 android:layout_gravity="left"
                 style="@style/GraySubheading"
+                android:layout_marginTop="16dp"
                 android:text="@string/delivery_range_label"/>
             <TextView
                 android:id="@+id/delivery_range"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 android:textColor="@color/text_nearly_black"
                 />
 
@@ -91,13 +94,14 @@
             <TextView
                 android:layout_gravity="left"
                 style="@style/GraySubheading"
+                android:layout_marginTop="16dp"
                 android:text="@string/order_total_label"/>
             <TextView
                 android:id="@+id/order_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:textSize="14sp"
+                android:textSize="18sp"
                 android:textColor="@color/text_nearly_black"
                 />
 
