--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -151,6 +151,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_below="@id/create_account_hr"
                     android:layout_marginTop="16dp"
+                    android:tint="@android:color/white"
+                    android:background="@drawable/oval"
                     android:src="@android:drawable/ic_input_add"
                     />
             </RelativeLayout>
