more on order confirmation layout

--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -26,12 +26,15 @@
 
             <!--green checkmark image-->
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="16dp"
-                android:src="@drawable/bullet"
+                android:padding="8dp"
+                android:tint="@android:color/white"
+                android:background="@drawable/green_oval"
+                android:src="@drawable/ic_check_white_24dp"
                 />
 
             <!--confirmation message text -->
@@ -155,6 +158,48 @@
                     android:background="@drawable/oval"
                     android:src="@android:drawable/ic_input_add"
                     />
+            </RelativeLayout>
+
+            <!--guest check out only - confirmation after creating an account-->
+            <RelativeLayout
+                android:id="@+id/account_confirmation_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/background_white"
+                android:visibility="gone">
+
+                <!--horizontal rule-->
+                <View
+                    android:id="@+id/account_confirmation_hr"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/background_light_gray"/>
+
+                <TextView
+                    android:id="@+id/account_confirmation_msg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@id/account_confirmation_hr"
+                    android:layout_marginTop="16dp"
+                    android:textSize="16sp"
+                    android:textColor="@color/text_nearly_black"
+                    android:text="@string/account_confirmation_msg"
+                    />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@id/account_confirmation_hr"
+                    android:layout_marginTop="16dp"
+                    android:padding="4dp"
+                    android:tint="@android:color/white"
+                    android:background="@drawable/blue_oval"
+                    android:src="@drawable/ic_check_white_18dp"
+                    />
+                <!--btn_check_buttonless_on-->
             </RelativeLayout>
 
         </LinearLayout>
