updating selection icon for registered checkout

--- a/app/src/main/res/layout/profile_listview_row.xml
+++ b/app/src/main/res/layout/profile_listview_row.xml
@@ -12,7 +12,8 @@
         android:padding="10dp"
         android:visibility="gone"
         android:id="@+id/selectionImage"
-        android:src="@drawable/bullet"
+        android:tint="@color/background_blue"
+        android:src="@drawable/ic_check_white_24dp"
         />
 
     <LinearLayout
